BuildingManagerTests.java